# wseg

./: .merlin  CHANGES.md  META  Makefile  test.ml  wseg.ml  wseg.mli  wseg.opam
src/: wseg.ml  wseg.mli
test/: test.ml
