opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/wseg/"
bug-reports: "https://github.com/kandu/wseg/issues"
license: "MIT"
dev-repo: "git://github.com/kandu/wseg.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.4"}
  "base" {>= "v0.9"}
  "trie" {>= "1.0"}
  "camomile" {>= "1.0"}
]
synopsis:
  "A word identification system based on the maximum matching algorithm"
description:
  "The full technology page of the MMSEG system is available on http://technology.chtsai.org/wseg/"
